Actualiza la configuración del entorno y mejora la estructura del proyecto. Se añaden variables de entorno para la base de datos, JWT y el puerto del servidor. Se actualizan los títulos y enlaces en la interfaz de usuario, y se implementan nuevas rutas para la gestión de usuarios y comunidades. Se mejora la gestión de logs y se añaden nuevas funcionalidades en los controladores de usuario y comunidad.

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_BACKEND_URL=http://localhost:4000
+DATABASE_URL="mongodb://localhost:27017/explorador-planetario"
+JWT_SECRET="tu_jwt_secret_super_seguro_aqui"
+PORT=3001
+NODE_ENV="development"
