Mis cambios locales antes de actualizar

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # Database
 DATABASE_URL="mongodb://localhost:27017/explorador-planetario"
-
+$env:DATABASE_URL="mongodb://localhost:27017/explorador-planetario"; npx ts-node src/seed.ts
 # JWT
 JWT_SECRET="tu_jwt_secret_super_seguro_aqui_2024"
 JWT_REFRESH_SECRET="tu_jwt_refresh_secret_super_seguro_aqui_2024"
