--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/leaflet": "^1.9.19",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.17",
+    "dotenv-cli": "^8.0.0",
     "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
