fix: Resuelve errores de validación y enum de Zod, y actualiza dependencias del frontend

--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,9 @@
 # Database
-DATABASE_URL="mongodb://localhost:27017/explorador-planetario"
-$env:DATABASE_URL="mongodb://localhost:27017/explorador-planetario"; npx ts-node src/seed.ts
+DATABASE_URL="mongodb+srv://probuho:IT1bCkZyeFlotsHK@cluster0.rhalndk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+$env:DATABASE_URL="mongodb+srv://probuho:IT1bCkZyeFlotsHK@cluster0.rhalndk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"; npx ts-node src/seed.ts
 # JWT
 JWT_SECRET="tu_jwt_secret_super_seguro_aqui_2024"
-JWT_REFRESH_SECRET="tu_jwt_refresh_secret_super_seguro_aqui_2024"
+JWT_REFRESH_SECRET="tu_jwt_refresh_secret_super_seguro_aqui_2025"
 
 # Server
 PORT=5000
