Configuración para deploy en Render

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_BACKEND_URL=http://localhost:4000
+mongodb+srv://probuho:IT1bCkZyeFlotsHK@cluster0.rhalndk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
