--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "seed": "cd server && npx dotenv-cli -e .env -- ts-node src/seed.ts",
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:server": "cd server && npm run build",
+    "build:client": "npm run build",
+    "build:all": "npm run build:client && npm run build:server",
+    "start:prod": "cd server && npm start",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -29,6 +33,7 @@
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.509.0",
+    "mongodb": "^6.18.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
