--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: explorador-planetario-api
     env: node
     plan: free
-    buildCommand: npm install && cd server && npm install && npm run build
+    buildCommand: npm install --legacy-peer-deps && cd server && npm install --legacy-peer-deps && npm run build
     startCommand: cd server && npm start
     envVars:
       - key: DATABASE_URL
