--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # CONFIGURACIÓN DE DESARROLLO
 NODE_ENV=development
-DATABASE_URL="mongodb+srv://probuho:MiBaseDeDatos42@gepddb.jz5tljo.mongodb.net/explorador-planetario-dev"
+DATABASE_URL="mongodb://localhost:27017/explorador-planetario"
 PORT=10000
 FRONTEND_URL="http://localhost:5173"
 JWT_SECRET="dev_secret_key_2024"
